app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-wilapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-wilapp
  template:
    metadata:
      labels:
        app: argocd-wilapp
    spec:
      containers:
        - name: argocd-wilapp
          image: wil42/playground:v2
          ports:
          - containerPort: 8888
