app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-wilapp
spec:
  ports:
    - name: http
      port: 8888
      targetPort: 8888
  selector:
    matchLabels:
      app: argocd-wilapp
  template:
    metadat:
        labels:
          app: argocd-wilapp
