app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: dev
spec:
  rules:
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-app
            port:
              number: 80
